# chirc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README
doc/: CMSC23300_WIN12_project1.tex  chirc_project_specification.tex  figures.odg
docs/: Doxyfile
lib/: README.txt
src/: Makefile  channel.c  channel.h  channeluser.c  channeluser.h  chirc.h  connection.c  connection.h  ctx.c  ctx.h  handlers.c  handlers.h  log.c  log.h  main.c  message.c  message.h  reply.h  server.c  server.h  user.c  user.h  utils.c  utils.h
tests/: __init__.py  common.py  conftest.py  grade.py  print-categories.py  pytest.ini  replies.py  runners.py  scores.py  test_channel.py  test_connection.py  test_lusers_motd.py  test_modes.py  test_motd.py  test_ping.py  test_privmsg.py  test_robustness.py  test_unknown.py  test_whois.py
tests/chirc/: client.py  replies.py  types.py
tests/chirc/tests/: common.py  test_channel.py  test_connection.py  test_lusers_motd.py  test_modes.py  test_ping.py  test_privmsg.py  test_robustness.py  test_unknown.py  test_whois.py
tests/chirc/tests/common/: fixtures.py  sessions.py
tests/chirc/tests/single_server/: conftest.py  test_channel.py  test_connection.py  test_lusers_motd.py  test_modes.py  test_ping.py  test_privmsg.py  test_whois.py
tests/chirc/tests/two_servers/: conftest.py  test_connection.py  test_relay.py  test_state.py
tests/rubrics/: assignment-1+4.json  assignment-1.json  assignment-2.json  assignment-3.json  assignment-4.json  assignment-5.json
